--- a/package.json
+++ b/package.json
@@ -78,10 +78,17 @@
   },
   "devDependencies": {
     "@types/body-parser": "^1.19.5",
-    "@types/express": "^4.17.21",
-    "@types/node": "^22",
+    "@types/connect": "^3.4.38",
+    "@types/dotenv": "^8.2.0",
+    "@types/estree": "^1.0.6",
+    "@types/express": "^5.0.0",
+    "@types/json-schema": "^7.0.15",
+    "@types/node": "^22.7.7",
     "@types/nodemailer": "^6.4.16",
-    "@types/react": "^18",
+    "@types/prop-types": "^15.7.13",
+    "@types/qs": "^6.9.16",
+    "@types/range-parser": "^1.2.7",
+    "@types/react": "^18.3.11",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.4.20",
     "copyfiles": "^2.4.1",
