--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "date-fns": "^4.1.0",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
+    "framer-motion": "^11.11.9",
     "lucide-react": "^0.441.0",
     "next": "^14.2.13",
     "next-themes": "^0.3.0",
